@@ -29,6 +29,8 @@
 	(PokerRendererTests.test27_rotateTableWithTwo): Wrote method.
 	(PokerRendererTests.test28_sendPacketCoverage): Wrote test.
 	(PokerRendererTests.test29_schedulePacketCoverage): Wrote method.
+	(PokerRendererTests.test30_getSeatUserNotLoggedInAndInWeirdState):
+	Wrote method.
 
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
 	error message for bad outfit should print outfits, not urls.
